--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
 
         header {
-            background: linear-gradient(to right, blue, green, orange);
+            background: linear-gradient(to right, blue, green);
             color: white;
             padding: 10px;
             font-size: 24px;
@@ -45,7 +45,7 @@
             padding: 10px;
             font-size: 16px;
             border: 1px solid;
-            border-image-source: linear-gradient(to right, blue, green, orange);
+            border-image-source: linear-gradient(to right, blue, green);
             border-image-slice: 1;
             border-radius: 5px;
             resize: vertical;
@@ -121,7 +121,7 @@
             align-items: center;
             padding: 10px;
             border: 1px solid;
-            border-image-source: linear-gradient(to right, blue, green, orange);
+            border-image-source: linear-gradient(to right, blue, green);
             border-image-slice: 1;
             border-radius: 5px;
             margin-bottom: 10px;
