--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
 
         header {
-            background: linear-gradient(to right, blue, green);
+            background: black;
             color: white;
             padding: 10px;
             font-size: 24px;
@@ -45,7 +45,7 @@
             padding: 10px;
             font-size: 16px;
             border: 1px solid;
-            border-image-source: linear-gradient(to right, blue, green);
+            border-image-source: black;
             border-image-slice: 1;
             border-radius: 5px;
             resize: vertical;
@@ -69,21 +69,21 @@
         }
 
         #add-note {
-            background-color: #007bff;
+            background-color: black;
             color: white;
         }
 
         #add-note:hover {
-            background-color: #0056b3;
+            background-color: #333333;
         }
 
         #new-note {
-            background-color: green;
+            background-color: black;
             color: white;
         }
 
         #new-note:hover {
-            background-color: darkgreen;
+            background-color: #333333;
         }
 
         #save-note {
@@ -96,12 +96,12 @@
         }
 
         #download-note {
-            background-color: #ffa500;
+            background-color: black;
             color: white;
         }
 
         #download-note:hover {
-            background-color: #cc8400;
+            background-color: #333333;
         }
 
         #note-list {
@@ -121,7 +121,7 @@
             align-items: center;
             padding: 10px;
             border: 1px solid;
-            border-image-source: linear-gradient(to right, green);
+            border-image-source: black;
             border-image-slice: 1;
             border-radius: 5px;
             margin-bottom: 10px;
