--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             height: 200px;
             margin-bottom: 10px;
             padding: 10px;
-            font-size: 16px;
+            font-size: 18px;
+            font-family: Georgia, serif;
             border: 1px solid;
             border-image-source: black;
             border-image-slice: 1;
